Fix Button positions and their text align

--- a/css/btn_3d.css
+++ b/css/btn_3d.css
@@ -4,8 +4,8 @@
     outline:medium none;
     -moz-outline-style:none;
     border:0px;
-    margin-right:10px;
-    margin-top:15px;
+    width:100%;
+    margin:auto;
 }
 .btn3d:focus {
     outline:medium none;
